# PolyChron

./: .gitattributes  .gitignore  ACCEPT.csv  ACCEPT1.csv  ACCEPT_2.csv  Automated_MCMC_code_clean  CITATION.cff  CONTRIBUTING.md  README.md  app_func_testing  app_saveandload.py  automated_mcmc_ordering_coupling.py  automated_mcmc_ordering_coupling_copy.py  automated_mcmc_ordering_coupling_grouping_prototype.py  automated_mcmc_ordering_pylint  bayes_factors_test  beta_correct_labels  centrality_measures.py  fi_new  fig-12-sequence.dot  github_working_app.py  hodder_test  intcal98.csv  mcmc_debugging_file.py  mkdocs.yml  module_testing  module_testing.py  pyproject.toml  requirements.txt  sim_radiocarbon_dates  sim_radiocarbon_dates.py  spline_interpolation_new.txt  working app  working_app  working_app.py  workinggraphs
.github/workflows/: docs.yml  format.yml  lint.yml  linux.yml  macos.yml  publish.yml  tests.yml  windows.yml
PolyChron/: __main__.py  _version.py  automated_mcmc_ordering_coupling_copy.py  gui.py  linear_interpolation.txt
docs/: generate_dynamic_pages.py  getting-started.md  hooks.py  index.md  macros.py
docs/api/: automated_mcmc_ordering_coupling_copy.md  gui.md  index.md
docs/assets/css/: polychron.css
docs/overrides/partials/: copyright.html
docs/reference/: index.md
docs/userguide/: configuration.md  index.md
docs/using/: configuration.md  index.md  post-mcmc-analysis.md  posterior-inference.md  prior-elicitation.md  project-loading.md
polychron/: gui.py
scripts/: interpolation_function.ipynb
src/polychron/: Config.py  GUIApp.py  GUIThemeManager.py  PageOne.py  PageTwo.py  __main__.py  _version.py  automated_mcmc_ordering_coupling_copy.py  entrypoint.py  globals.py  gui.py  interfaces.py  mcmc.py  popupWindow.py  popupWindow10.py  popupWindow2.py  popupWindow3.py  popupWindow4.py  popupWindow5.py  popupWindow6.py  popupWindow7.py  popupWindow8.py  popupWindow9.py  util.py
src/polychron/models/: AddContextModel.py  DatafilePreviewModel.py  GroupRelationship.py  GroupRelationshipType.py  InterpolatedRCDCalibrationCurve.py  InterpolationData.py  MCMCData.py  Model.py  Project.py  ProjectSelection.py  ProjectsDirectory.py  RemoveContextModel.py  RemoveStratigraphicRelationshipModel.py
src/polychron/presenters/: AddContextPresenter.py  BaseFramePresenter.py  BaseMainWindowPresenter.py  BasePopupPresenter.py  CalibrateModelSelectPresenter.py  DatafilePreviewPresenter.py  DatingResultsPresenter.py  FramePresenter.py  MCMCProgressPresenter.py  ManageGroupRelationshipsPresenter.py  ManageIntrusiveOrResidualContextsPresenter.py  ModelCreatePresenter.py  ModelPresenter.py  ModelSelectPresenter.py  PopupPresenter.py  ProjectCreatePresenter.py  ProjectSelectPresenter.py  ProjectSelectProcessPopupPresenter.py  ProjectWelcomePresenter.py  RemoveContextPresenter.py  RemoveStratigraphicRelationshipPresenter.py  ResidualCheckConfirmPresenter.py  ResidualCheckPopupPresenter.py  ResidualCheckPresenter.py  ResidualOrIntrusivePresenter.py  SelectCalibrationCurvePresenter.py  SplashPresenter.py  WelcomePresenter.py
src/polychron/resources/: intcal20_interpolated.csv  marine20_interpolated.csv  shcal20_interpolated.csv
src/polychron/views/: AddContextView.py  BaseFrameView.py  BaseMainWindowView.py  BasePopupView.py  CalibrateModelSelectView.py  DatafilePreviewView.py  DatingResultsView.py  FrameView.py  GetSupplementaryDataView.py  MCMCProgressView.py  ManageGroupRelationshipsView.py  ManageIntrusiveOrResidualContexts.py  ManageIntrusiveOrResidualContextsView.py  ModelCreateView.py  ModelSelectView.py  ModelView.py  PopupView.py  ProjectCreateView.py  ProjectSelectProcessPopupView.py  ProjectSelectView.py  ProjectWelcomeView.py  RemoveContextView.py  RemoveStratigraphicRelationshipView.py  ResidualCheckConfirmView.py  ResidualCheckPopupView.py  ResidualCheckView.py  ResidualOrIntrusiveView.py  SelectCalibrationCurveView.py  SplashView.py  WelcomeView.py
tests/: conftest.py
tests/PolyChron/: test_gui.py
tests/data/context-equality-csv/: bad-column-names.csv  duplicate-row.csv  extra-columns.csv  header-only.csv  multiple-combinations-combined-name.csv  multiple-combinations-original-name.csv  reversed.csv  simple.csv
tests/data/context-grouping-csv/: bad-column-names.csv  extra-columns.csv  header-only.csv  simple.csv
tests/data/demo/: 1-strat.csv  2-dates.csv  3-context-grouping.csv  4-group-ordering-with-relationship.csv  4-group-ordering.csv  5-context-equality.csv
tests/data/group-relationships-csv/: bad-column-names.csv  extra-columns.csv  header-only.csv  invalid-relationship.csv  simple.csv  with-relationship.csv
tests/data/many-groups/: 1-strat.csv  3-context-grouping.csv  4-group-ordering.csv
tests/data/rcd-csv/: bad-column-names.csv  extra-columns.csv  header-only.csv  simple.csv
tests/data/strat-csv/: bad-column-names.csv  extra-columns.csv  header-only.csv  invalid-context-label.csv  simple.csv  unconnected.csv
tests/data/thesis/: thesis-b1-strat.csv  thesis-b2-radiocarbon.csv  thesis-b3-context-grouping.csv  thesis-b4-group-ordering.csv
tests/polychron/: test_Config.py  test_GUIApp.py  test_GUIThemeManager.py  test_entrypoint.py  test_gui.py  test_util.py
tests/polychron/models/: test_AddContextModel.py  test_DatafilePreviewModel.py  test_GroupRelationship.py  test_GroupRelationshipType.py  test_InterpolatedRCDCalibrationCurve.py  test_MCMCData.py  test_Model.py  test_Project.py  test_ProjectSelection.py  test_ProjectsDirectory.py  test_RemoveContextModel.py  test_RemoveStratigraphicRelationshipModel.py
tests/polychron/presenters/: test_AddContextPresenter.py  test_CalibrateModelSelectPresenter.py  test_DatafilePreviewPresenter.py  test_DatingResultsPresenter.py  test_FramePresenter.py  test_MCMCProgressPresenter.py  test_ManageGroupRelationshipsPresenter.py  test_ManageIntrusiveOrResidualContextsPresenter.py  test_ModelCreatePresenter.py  test_ModelPresenter.py  test_ModelSelectPresenter.py  test_PopupPresenter.py  test_ProjectCreatePresenter.py  test_ProjectSelectPresenter.py  test_ProjectWelcomePresenter.py  (+5 more)
(+30 files in other folders)
